Fix scroll issues on iOS

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
   background-image: url(./still.jpg);
   background-size: cover;
   background-position: 75% center;
-  background-attachment: fixed;
 
   color: rgba(255, 255, 255, 0.7);
   font-family: "Source Code Pro", sans-serif;
@@ -42,14 +41,15 @@ body {
   width: 100%;
 
   position: absolute;
-  top: calc(100vh - 100px);
+  margin-top: calc(100vh - 100px);
   z-index: 2;
 }
 
 @media only screen and (min-width: 600px) {
   .credits {
-    max-width: min(100%, 400px);
     position: static;
+    margin-top: 0;
+    max-width: min(100%, 400px);
   }
 }
 
@@ -86,11 +86,34 @@ html {
 .main {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 @media only screen and (min-width: 600px) {
   .main {
     height: 100%;
+  }
+}
+
+.scrollContainer {
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  overflow: auto;
+  position: absolute;
+  z-index: 2;
+}
+
+@media only screen and (min-width: 600px) {
+  .scrollContainer {
+    position: static;
+    overflow: visible;
+    height: auto;
+    width: auto;
   }
 }
 
